# hillel_homeworks

./: LICENSE
hw3/: logger.h  main.cpp
hw4/: input.txt  main.cpp
hw5/: CMakeLists.txt  Main.qml  TemperatureModel.h  main.cpp  temperaturecontroller.cpp  temperaturecontroller.h  temperaturemodel.cpp
